objects/Forecast__c.object
<CustomObject>
    <description>Forecast object to be used by SFOs and RVPs</description>
    <fields>
        <fullName>All_FX_Adjustment_to_Dollar__c</fullName>
        <label>All FX Adjustment to Dollar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking_Maintenance_Hardware__c</fullName>
        <label>Bookings Hardware Maintenance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking_Maintenance_Software__c</fullName>
        <label>Bookings Software Maintenance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking_Product_Hardware__c</fullName>
        <label>Bookings Hardware Product</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking_Product_Software__c</fullName>
        <label>Bookings Software Product</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Allegro_PG_Adjustment__c</fullName>
        <label>Bookings Allegro PG Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Allegro_PG_Commit__c</fullName>
        <label>Bookings Allegro PG Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Allegro_PG_Pipeline__c</fullName>
        <label>Bookings Allegro PG Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Allegro_PG_Total__c</fullName>
        <formula>Bookings_Allegro_PG_Adjustment__c + Bookings_Allegro_PG_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Allegro PG Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Analog_Design_Environment_PG_Ad__c</fullName>
        <label>Bookings Analog Design Environment PG Ad</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Analog_Design_Environment_PG_Co__c</fullName>
        <label>Bookings Analog Design Environment PG Co</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Analog_Design_Environment_PG_Pi__c</fullName>
        <label>Bookings Analog Design Environment PG Pi</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Analog_Design_Envnt_PG_Total__c</fullName>
        <description>Bookings Analog Design Environment PG Total</description>
        <formula>Bookings_Analog_Design_Environment_PG_Ad__c + Bookings_Analog_Design_Environment_PG_Co__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Analog Design Envnt PG Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_CCP_Maint__c</fullName>
        <label>Bookings CCP Maint</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_CCP_Prod__c</fullName>
        <label>Bookings CCP Prod</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Characterization_Adjustment__c</fullName>
        <label>Bookings Characterization Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Characterization_PG_Adjustment__c</fullName>
        <label>Bookings Characterization PG Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Characterization_PG_Commit__c</fullName>
        <label>Bookings Characterization PG Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Characterization_PG_Pipeline__c</fullName>
        <label>Bookings Characterization PG Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Characterization_PG_Total__c</fullName>
        <formula>Bookings_Characterization_PG_Adjustment__c + Bookings_Characterization_PG_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Characterization PG Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Circuit_Simulation_Adjustment__c</fullName>
        <label>Bookings Circuit Simulation Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Circuit_Simulation_Commit__c</fullName>
        <label>Bookings Circuit Simulation Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Circuit_Simulation_PG_Adjust__c</fullName>
        <label>Bookings Circuit Simulation PG Adjust</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Circuit_Simulation_PG_Commit__c</fullName>
        <label>Bookings Circuit Simulation PG Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Circuit_Simulation_PG_Pipeline__c</fullName>
        <label>Bookings Circuit Simulation PG Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Circuit_Simulation_PG_Total__c</fullName>
        <formula>Bookings_Circuit_Simulation_PG_Adjust__c + Bookings_Circuit_Simulation_PG_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Circuit Simulation PG Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Circuit_Simulation_Pipeline__c</fullName>
        <label>Bookings Circuit Simulation Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Circuit_Simulation_Total__c</fullName>
        <formula>Bookings_Circuit_Simulation_Commit__c + Bookings_Circuit_Simulation_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Circuit Simulation Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Custom_Environment_Adjustment__c</fullName>
        <label>Bookings Custom Environment Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Custom_Environment_Commit__c</fullName>
        <label>Bookings Custom Environment Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Custom_Environment_Pipeline__c</fullName>
        <label>Bookings Custom Environment Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Custom_Environment_Total__c</fullName>
        <formula>Bookings_Custom_Environment_Commit__c + Bookings_Custom_Environment_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Custom Environment Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Custom_Layout_PG_Adjustment__c</fullName>
        <label>Bookings Custom Layout PG Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Custom_Layout_PG_Commit__c</fullName>
        <label>Bookings Custom Layout PG Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Custom_Layout_PG_Pipeline__c</fullName>
        <label>Bookings Custom Layout PG Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Custom_Layout_PG_Total__c</fullName>
        <formula>Bookings_Custom_Layout_PG_Adjustment__c + Bookings_Custom_Layout_PG_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Custom Layout PG Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_DFM_PG_Adjustment__c</fullName>
        <label>Bookings DFM PG Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_DFM_PG_Commit__c</fullName>
        <label>Bookings DFM PG Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_DFM_PG_Pipeline__c</fullName>
        <label>Bookings DFM PG Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_DFM_PG_Total__c</fullName>
        <formula>Bookings_DFM_PG_Adjustment__c + Bookings_DFM_PG_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings DFM PG Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_DSG_Differentiated_PG_Adjust__c</fullName>
        <label>Bookings DSG - Differentiated PG Adjust</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_DSG_Differentiated_PG_Commit__c</fullName>
        <label>Bookings DSG - Differentiated PG Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_DSG_Differentiated_PG_Pipe__c</fullName>
        <label>Bookings DSG - Differentiated PG Pipe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_DSG_Differentiated_PG_Total__c</fullName>
        <formula>Bookings_DSG_Differentiated_PG_Adjust__c + Bookings_DSG_Differentiated_PG_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings DSG - Differentiated PG Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Design_IP_Adjustment__c</fullName>
        <label>Bookings Design IP Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Design_IP_Commit__c</fullName>
        <label>Bookings Design IP Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Design_IP_Pipeline__c</fullName>
        <label>Bookings Design IP Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Design_IP_Total__c</fullName>
        <formula>Bookings_Design_IP_Commit__c + Bookings_Design_IP_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Design IP Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Diff_Dig_Verific_PG_Adjust__c</fullName>
        <label>Bookings Diff Dig Verific PG Adjust</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Diff_Dig_Verific_PG_Commit__c</fullName>
        <label>Bookings Diff Dig Verific PG Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Diff_Dig_Verific_PG_Pipe__c</fullName>
        <label>Bookings Diff Dig Verific PG Pipe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Diff_Dig_Verific_PG_Total__c</fullName>
        <formula>Bookings_Diff_Dig_Verific_PG_Adjust__c +
Bookings_Diff_Dig_Verific_PG_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Diff Dig Verific PG Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Digital_Imp_Adjustment__c</fullName>
        <label>Bookings Digital Imp Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Digital_Imp_Commit__c</fullName>
        <label>Bookings Digital Imp Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Digital_Imp_Pipeline__c</fullName>
        <label>Bookings Digital Imp Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Digital_Imp_Total__c</fullName>
        <formula>Bookings_Digital_Imp_Commit__c + Bookings_Digital_Imp_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Digital Imp Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Digital_Simulation_PG_Adjust__c</fullName>
        <label>Bookings Digital Simulation PG Adjust</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Digital_Simulation_PG_Commit__c</fullName>
        <label>Bookings Digital Simulation PG Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Digital_Simulation_PG_Pipeline__c</fullName>
        <label>Bookings Digital Simulation PG Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Digital_Simulation_PG_Total__c</fullName>
        <formula>Bookings_Digital_Simulation_PG_Adjust__c + Bookings_Digital_Simulation_PG_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Digital Simulation PG Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Electrical_Signoff_Adjustment__c</fullName>
        <label>Bookings Electrical Signoff Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Electrical_Signoff_Commit__c</fullName>
        <label>Bookings Electrical Signoff Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Electrical_Signoff_Pipeline__c</fullName>
        <label>Bookings Electrical Signoff Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Electrical_Signoff_Total__c</fullName>
        <formula>Bookings_Electrical_Signoff_Commit__c + Bookings_Electrical_Signoff_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Electrical Signoff Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Emulation_Acc_Adjustment__c</fullName>
        <label>Bookings Emulation &amp; Acc Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Emulation_Acc_Commit__c</fullName>
        <label>Bookings Emulation &amp; Acc Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Emulation_Acc_Pipeline__c</fullName>
        <label>Bookings Emulation &amp; Acc Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Emulation_Acc_Total__c</fullName>
        <formula>Bookings_Emulation_Acc_Commit__c + Bookings_Emulation_Acc_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Emulation &amp; Acc Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Extraction_PG_Adjustment__c</fullName>
        <label>Bookings Extraction PG Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Extraction_PG_Commit__c</fullName>
        <label>Bookings Extraction PG Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Extraction_PG_Pipeline__c</fullName>
        <label>Bookings Extraction PG Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Extraction_PG_Total__c</fullName>
        <formula>Bookings_Extraction_PG_Adjustment__c + Bookings_Extraction_PG_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Extraction PG Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Formal_Verification_Adjustment__c</fullName>
        <label>Bookings Formal Verification Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Formal_Verification_Commit__c</fullName>
        <label>Bookings Formal Verification Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Formal_Verification_PG_Adjust__c</fullName>
        <label>Bookings Formal Verification PG Adjust</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Formal_Verification_PG_Commit__c</fullName>
        <label>Bookings Formal Verification PG Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Formal_Verification_PG_Pipeline__c</fullName>
        <label>Bookings Formal Verification PG Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Formal_Verification_PG_Total__c</fullName>
        <formula>Bookings_Formal_Verification_PG_Adjust__c + Bookings_Formal_Verification_PG_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Formal Verification PG Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Formal_Verification_Pipeline__c</fullName>
        <label>Bookings Formal Verification Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Formal_Verification_Total__c</fullName>
        <formula>Bookings_Formal_Verification_Commit__c + Bookings_Formal_Verification_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Formal Verification Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Functional_Verif_Adjustment__c</fullName>
        <label>Bookings Functional Verif Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Functional_Verif_Commit__c</fullName>
        <label>Bookings Functional Verif Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Functional_Verif_Pipeline__c</fullName>
        <label>Bookings Functional Verif Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Functional_Verif_Total__c</fullName>
        <formula>Bookings_Functional_Verif_Commit__c + Bookings_Functional_Verif_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Functional Verif Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_IC_Package_Adjustment__c</fullName>
        <label>Bookings IC Package Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_IC_Package_Commit__c</fullName>
        <label>Bookings IC Package Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_IC_Package_PG_Adjustment__c</fullName>
        <label>Bookings IC Package PG Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_IC_Package_PG_Commit__c</fullName>
        <label>Bookings IC Package PG Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_IC_Package_PG_Pipeline__c</fullName>
        <label>Bookings IC Package PG Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_IC_Package_PG_Total__c</fullName>
        <formula>Bookings_IC_Package_PG_Adjustment__c + Bookings_IC_Package_PG_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings IC Package PG Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_IC_Package_Pipeline__c</fullName>
        <label>Bookings IC Package Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_IC_Package_Total__c</fullName>
        <formula>Bookings_IC_Package_Commit__c + Bookings_IC_Package_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings IC Package Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_IP_Royalty_Adjustment__c</fullName>
        <label>Bookings IP Royalty Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_IP_Royalty_Commit__c</fullName>
        <label>Bookings IP Royalty Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_IP_Royalty_Pipeline__c</fullName>
        <label>Bookings IP Royalty Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_IP_Royalty_Total__c</fullName>
        <formula>Bookings_IP_Royalty_Adjustment__c +  Bookings_IP_Royalty_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings IP Royalty Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_IP_Tensilica_Commit__c</fullName>
        <label>Bookings IP Tensilica Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_IP_Tensilica_Pipeline__c</fullName>
        <label>Bookings IP Tensilica Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_IP_Tensilica_Royalty_Adjustment__c</fullName>
        <label>Bookings IP Tensilica Royalty Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_IP_Tensilica_Royalty_Commit__c</fullName>
        <label>Bookings IP Tensilica Royalty Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_IP_Tensilica_Royalty_Pipeline__c</fullName>
        <label>Bookings IP Tensilica Royalty Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_IP_Tensilica_Royalty_Total__c</fullName>
        <formula>Bookings_IP_Tensilica_Royalty_Adjustment__c +  Bookings_IP_Tensilica_Royalty_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings IP Tensilica Royalty Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_IP_Tensilica_Total__c</fullName>
        <formula>Bookings_IP_Tensilica__c +  Bookings_IP_Tensilica_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings IP Tensilica Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_IP_Tensilica__c</fullName>
        <label>Bookings IP Tensilica Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Jasper_PG_Adjustment__c</fullName>
        <label>Bookings Jasper PG Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Jasper_PG_Commit__c</fullName>
        <label>Bookings Jasper PG Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Jasper_PG_Pipeline__c</fullName>
        <label>Bookings Jasper PG Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Jasper_PG_Total__c</fullName>
        <formula>Bookings_Jasper_PG_Adjustment__c + Bookings_Jasper_PG_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Jasper PG Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Maint_Total__c</fullName>
        <formula>Booking_Maintenance_Hardware__c +  Booking_Maintenance_Software__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Maint Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_PCB_Design_Adjustment__c</fullName>
        <label>Bookings PCB Design Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_PCB_Design_Commit__c</fullName>
        <label>Bookings PCB Design Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_PCB_Design_Pipeline__c</fullName>
        <label>Bookings PCB Design Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_PCB_Design_Total__c</fullName>
        <formula>Bookings_PCB_Design_Commit__c + Bookings_PCB_Design_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings PCB Design Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_P_R_PG_Adjustment__c</fullName>
        <label>Bookings P&amp;R PG Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_P_R_PG_Commit__c</fullName>
        <label>Bookings P&amp;R PG Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_P_R_PG_Pipeline__c</fullName>
        <label>Bookings P&amp;R PG Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_P_R_PG_Total__c</fullName>
        <formula>Bookings_P_R_PG_Adjustment__c + Bookings_P_R_PG_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings P&amp;R PG Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Physical_Signoff_Adjustment__c</fullName>
        <label>Bookings Physical Signoff Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Physical_Signoff_Commit__c</fullName>
        <label>Bookings Physical Signoff Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Physical_Signoff_Pipeline__c</fullName>
        <label>Bookings Physical Signoff Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Physical_Signoff_Total__c</fullName>
        <formula>Bookings_Physical_Signoff_Commit__c + Bookings_Physical_Signoff_Adjustment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Physical Signoff Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Physical_Verification_PG_Adjust__c</fullName>
        <label>Bookings Physical Verification PG Adjust</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Physical_Verification_PG_Commit__c</fullName>
        <label>Bookings Physical Verification PG Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Physical_Verification_PG_Pipe__c</fullName>
        <label>Bookings Physical Verification PG Pipe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Physical_Verification_PG_Total__c</fullName>
        <formula>Bookings_Physical_Verification_PG_Adjust__c + Bookings_Physical_Verification_PG_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Physical Verification PG Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Power_Analysis_PG_Adjustment__c</fullName>
        <label>Bookings Power Analysis PG Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Power_Analysis_PG_Commit__c</fullName>
        <label>Bookings Power Analysis PG Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Power_Analysis_PG_Pipeline__c</fullName>
        <label>Bookings Power Analysis PG Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookings_Power_Analysis_PG_Total__c</fullName>
        <formula>Bookings_Power_Analysis_PG_Adjustment__c + Bookings_Power_Analysis_PG_Commit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Power Analysis PG Total</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
</CustomObject>